2015-10-10  Markus Gans  <guru.mail@muenster.de>
	* Deactivate a key from the status bar automatically 
	  after getting back from the callback.

2015-10-09  Markus Gans  <guru.mail@muenster.de>
	* Eliminate duplicate code

2015-10-06  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FTerm::init()

2015-10-05  Markus Gans  <guru.mail@muenster.de>
	* Improve compatibility with initialize_color
	* Better support for TeraTerm

2015-10-02  Markus Gans  <guru.mail@muenster.de>
	* No terminal updates until input data is pending. 
	  This speeds up the window moving with the mouse on terminals 
	  with a high latency.
	* Use now the select command before read ENQ and SEC_DA

2015-09-29  Markus Gans  <guru.mail@muenster.de>
	* Some code improvements

2015-09-27  Markus Gans  <guru.mail@muenster.de>
	* Add methods getPos and setPos to FRect and FWidget

2015-09-24  Markus Gans  <guru.mail@muenster.de>
	* Add macro _METHOD_CALLBACK and _FUNCTION_CALLBACK 
	  to simplify the use callback functions
	* The callback data pointer is now predefined with 
	  NULL as default argument

2015-09-23  Markus Gans  <guru.mail@muenster.de>
	* Further code optimizations

2015-09-22  Markus Gans  <guru.mail@muenster.de>
	* Add the possibility to hide a virtual window
	* Some code optimizations

2015-09-18  Markus Gans  <guru.mail@muenster.de>
	* Fixed compile error on 32-bit architectures

2015-08-08  Markus Gans  <guru.mail@muenster.de>
	* Bug fix in FDialog (use GlobalPos to move)
	* Don't check mouse click position on titlebar again 
	  while FDialog is in move

2015-07-26  Markus Gans  <guru.mail@muenster.de>
	* init() method for the FStatusKey constructor 
	  to avoid code duplication

2015-07-18  Markus Gans  <guru.mail@muenster.de>
	* Add multiple lines support for FLabel

2015-07-12  Markus Gans  <guru.mail@muenster.de>
	* Improve focusFirstChild() and focusLastChild()

2015-07-09  Markus Gans  <guru.mail@muenster.de>
	* Better contrast on 8 color terminals
