@@ -138,8 +138,8 @@ void FLineEdit::drawInputField()
   gotoxy (xpos+xmin-1, ypos+ymin-1);
   if ( isMonochron() )
   {
-    setReverse(true);
     print (' ');
+    setUnderline(true);
   }
   else if ( isActiveFocus )
   {
@@ -190,7 +190,7 @@ void FLineEdit::drawInputField()
     x++;
   }
   if ( isMonochron() )
-    setReverse(false);
+    setUnderline(false);
 
   if ( isShadow )
     drawShadow ();
