@@ -61,7 +61,8 @@ void FSwitch::drawCheckButton()
   {
     if ( hasFocus() && ! button_pressed )
     {
-
+      if ( isMonochron() )
+        setBold(true);
       if ( isMonochron() || getMaxColor() < 16 )
       {
         wcsncpy ( on, L" <On>", 6);
@@ -75,7 +76,16 @@ void FSwitch::drawCheckButton()
         setColor (wc.button_active_focus_fg, wc.button_active_bg);
       else
         setColor (wc.button_hotkey_fg, wc.button_active_bg);
+
+    if ( isMonochron() )
+      setReverse(true);
     print (on);
+    if ( isMonochron() )
+    {
+      setReverse(false);
+      setBold(false);
+    }
+
     setColor (wc.button_inactive_fg, wc.button_inactive_bg);
     print (off);
     setCursorPos ( xpos + xmin + 1 + switch_offset_pos
@@ -85,8 +95,11 @@ void FSwitch::drawCheckButton()
   {
     setColor (wc.button_inactive_fg, wc.button_inactive_bg);
     print (on);
+
     if ( hasFocus() && ! button_pressed )
     {
+      if ( isMonochron() )
+        setBold(true);
       if ( isMonochron() || getMaxColor() < 16 )
       {
         wcsncpy ( off, L"<Off>", 6);
@@ -100,7 +113,16 @@ void FSwitch::drawCheckButton()
         setColor (wc.button_active_focus_fg, wc.button_active_bg);
       else
         setColor (wc.button_hotkey_fg, wc.button_active_bg);
+
+    if ( isMonochron() )
+      setReverse(true);
     print (off);
+    if ( isMonochron() )
+    {
+      setReverse(false);
+      setBold(false);
+    }
+
     setCursorPos ( xpos + xmin + 5 + switch_offset_pos
                  , ypos + ymin - 1 );
   }
