@@ -341,15 +341,15 @@ void FWidget::setColorTheme()
     wc.menu_inactive_bg              = fc::LightGray;
     wc.menu_hotkey_fg                = fc::Red;
     wc.menu_hotkey_bg                = fc::LightGray;
-    wc.statusbar_fg                  = fc::LightGray;
-    wc.statusbar_bg                  = fc::Blue;
+    wc.statusbar_fg                  = fc::Black;
+    wc.statusbar_bg                  = fc::LightGray;
     wc.statusbar_hotkey_fg           = fc::Red;
-    wc.statusbar_hotkey_bg           = fc::Blue;
+    wc.statusbar_hotkey_bg           = fc::LightGray;
     wc.statusbar_separator_fg        = fc::Black;
-    wc.statusbar_active_fg           = fc::Blue;
-    wc.statusbar_active_bg           = fc::LightGray;
+    wc.statusbar_active_fg           = fc::LightGray;
+    wc.statusbar_active_bg           = fc::Black;
     wc.statusbar_active_hotkey_fg    = fc::Red;
-    wc.statusbar_active_hotkey_bg    = fc::LightGray;
+    wc.statusbar_active_hotkey_bg    = fc::Black;
     wc.scrollbar_fg                  = fc::Black;
     wc.scrollbar_bg                  = fc::LightGray;
     wc.scrollbar_button_fg           = fc::Black;
