@@ -1,3 +1,6 @@
+2015-10-11  Markus Gans  <guru.mail@muenster.de>
+	* Improve attribute setting for bold, reverse and underline output
+
 2015-10-10  Markus Gans  <guru.mail@muenster.de>
 	* Deactivate a key from the status bar automatically 
 	  after getting back from the callback.
